<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingEnd="16dp"
		android:paddingStart="16dp">

		<CalendarView
			android:id="@+id/calendarView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/summary_common_statistic_title"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
			android:textColor="?colorPrimary" />

		<TextView
			android:id="@+id/summary_statistic_body"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/summary_performer_title"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
			android:textColor="?colorPrimary" />

		<TextView
			android:id="@+id/summary_performer_body"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_marginTop="24dp"
			android:text="@string/summary_export_title"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

		<Button
			android:id="@+id/summary_share"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/summary_share"
			app:icon="@drawable/ic_share" />

		<Button
			android:id="@+id/summary_export"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/summary_export"
			app:icon="@drawable/ic_export" />


		<Button
			android:id="@+id/summary_send_to_mail"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/summary_mail"
			app:icon="@drawable/ic_email" />
	</LinearLayout>

</ScrollView>